--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ markdown: rdiscount
 
 lang: fr
 
+lsi: true
+paginate: 3
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
