--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink: /:year/:month/:title.html
+permalink: :year/:month/:title.html
 
 exclude: [".rvmrc", ".rbenv-version", "Rakefile", "changelog.md"]
-auto: true
+#auto: true
 pygments: true
 markdown: rdiscount
+
+# relative_permalinks: false
 
 lang: fr
 
